Cleaned up some code. Replaced a 'match' with an external crate for converting int's to enum.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ authors = ["eddie"]
 rand = "0.7.3"
 lazy_static = "1.4.0"
 typenum = "1.11.2"
+num = "0.2.1"
+enum_primitive = "0.1.1"
 
 [profile.release]
 lto = true
+codegen-units = 1
