--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ lazy_static = "1.4.0"
 typenum = "1.11.2"
 num = "0.2.1"
 enum_primitive = "0.1.1"
+num-traits = "0.2"
+num-derive = "0.3"
 
 [profile.release]
 lto = true
