--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ num = "0.2.1"
 enum_primitive = "0.1.1"
 num-traits = "0.2"
 num-derive = "0.3"
+smallvec = "1.2.0"
 
 [profile.release]
 lto = true
