--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ enum_primitive = "0.1.1"
 num-traits = "0.2"
 num-derive = "0.3"
 smallvec = "1.2.0"
+core_affinity = "0.5.10"
 
 [profile.release]
 lto = true
