--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,8 @@ num-traits = "0.2"
 num-derive = "0.3"
 smallvec = "1.2.0"
 core_affinity = "0.5.10"
+num-format = "0.4.0"
 
 [profile.release]
 lto = true
-
+codegen-units = 1
