--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ num-traits = "0.2"
 num-derive = "0.3"
 core_affinity = "0.5.10"
 num-format = "0.4.0"
+smallvec = "1.4.1"
 
 [profile.release]
 lto = true
