Added script to set RUSTFLAGS to facilitate access to compiler options. Tweaked cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,9 @@ smallvec = "1.4.1"
 [profile.release]
 lto = true
 codegen-units = 1
-# debug = true
+#debug = true
+opt-level=3
+overflow-checks=false
+
 
 
