--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,8 @@ authors = ["eddie"]
 [dependencies]
 rand = "0.7.3"
 lazy_static = "1.4.0"
-typenum = "1.11.2"
-num = "0.2.1"
+typenum = "1.12.0"
+num = "0.3.0"
 enum_primitive = "0.1.1"
 num-traits = "0.2"
 num-derive = "0.3"
@@ -18,7 +18,7 @@ smallvec = "1.4.1"
 [profile.release]
 lto = true
 codegen-units = 1
-#debug = true
+debug = true
 opt-level=3
 overflow-checks=false
 
