--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,12 +13,12 @@ num-traits = "0.2"
 num-derive = "0.3"
 core_affinity = "0.5.10"
 num-format = "0.4.0"
-smallvec = "1.4.1"
+smallvec = "1.4.2"
 
 [profile.release]
 lto = true
 codegen-units = 1
-debug = true
+debug = false
 opt-level=3
 overflow-checks=false
 
