--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,8 @@ lazy_static = "1.4.0"
 typenum = "1.12.0"
 num = "0.3.1"
 enum_primitive = "0.1.1"
-num-traits = "0.2.14"
-num-derive = "0.3.3"
+#num-traits = "0.2.14"
+#num-derive = "0.3.3"
 core_affinity = "0.5.10"
 num-format = "0.4.0"
 
