--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "dolphin"
 version = "0.1.0"
 authors = ["eddie"]
+autobins = false
 
 [dependencies]
 rand = "0.8.3"
@@ -26,9 +27,11 @@ rustflags = ["-C target-cpu=native"]        # comma-separated
 
 [[bin]]
 name = "perft"
-src = "src/perft/main.rs"
+test = true
 
 [[bin]]
 name = "dolphin"
-src = "src/perft/main.rs"
+src = "src/main.rs"
+test = true
+
 
