--- a/dolphin_core/Cargo.toml
+++ b/dolphin_core/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 name = "dolphin_core"
 version = "0.1.0"
-authors = ["eddiemcnally <emcn@gmx.com>"]
-edition = "2018"
+authors = ["eddiemcnally <emcn at gmx dot com>"]
+edition = "2021"
 
 
 [dependencies]
 rand = "0.8.4"
 typenum = "1.14.0"
-num_enum = "0.5.4"
+num_enum = "0.5.5"
 core_affinity = "0.5.10"
 num-traits = "0.2.14"
 
