--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,8 @@ codegen-units = 1
 debug = false
 opt-level = 3
 overflow-checks=false
+panic = "abort"
+strip = "debuginfo"
 
-
+[build]
+rustflags = ["-C", "target-cpu=native"]
