--- a/dolphin_core/Cargo.toml
+++ b/dolphin_core/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 
 [dependencies]
 rand = "0.8.5"
-rand_seeder = "0.2.3"
+rand_seeder = "0.3.0"
 rand_xoshiro = "0.6.0"
 core_affinity = "0.8.0"
 bitflags = "2.0.2"
+enumn = "0.1.14"
